<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#366796"
    tools:context=".activities.DetailsActivity"
    tools:showIn="@layout/activity_details">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPicture"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/ivRight"
            app:layout_constraintStart_toEndOf="@+id/ivLeft"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/ivLeft"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivPicture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivPicture"
            app:srcCompat="@drawable/ic_left_arrow"
            android:contentDescription="TODO" />

        <ImageView
            android:id="@+id/ivRight"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivPicture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivPicture"
            app:srcCompat="@drawable/ic_right_arrow" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ivLeft"
            app:layout_constraintTop_toBottomOf="@+id/ivPicture" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/category"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/price"
            app:layout_constraintStart_toEndOf="@+id/category"
            app:layout_constraintTop_toTopOf="@+id/category" />

        <TextView
            android:id="@+id/rooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/rooms"
            app:layout_constraintStart_toEndOf="@+id/Price"
            app:layout_constraintTop_toTopOf="@+id/Price" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/size"
            app:layout_constraintStart_toEndOf="@+id/rooms"
            app:layout_constraintTop_toTopOf="@+id/rooms" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            app:layout_constraintEnd_toStartOf="@+id/ivRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ivLeft"
            app:layout_constraintTop_toBottomOf="@+id/category" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/address"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/city"
            app:layout_constraintStart_toStartOf="@+id/address"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <TextView
            android:id="@+id/zipcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/zipcode"
            app:layout_constraintStart_toStartOf="@+id/city"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:apiKey="AIzaSyDZ2Nj9veSteHFuontDUaZcqXhRVtI1UV8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivRight"
            app:layout_constraintStart_toEndOf="@+id/ivLeft"
            app:layout_constraintTop_toBottomOf="@+id/zipcode" />

        <ImageButton
            android:id="@+id/deletePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:srcCompat="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="@+id/ivPicture"
            app:layout_constraintEnd_toStartOf="@+id/ivRight"
            app:layout_constraintHorizontal_bias="0.985"
            app:layout_constraintStart_toEndOf="@+id/ivLeft"
            app:layout_constraintTop_toTopOf="@+id/ivPicture"
            app:layout_constraintVertical_bias="0.932" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>