<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF6262"
        tools:context=".activities.ProfileFragment">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FF6262">

            <ImageView
                android:id="@+id/picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <Button
                android:id="@+id/btnChangePicture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#366796"
                app:layout_constraintBottom_toTopOf="@+id/tvName"
                app:layout_constraintEnd_toEndOf="@+id/picture"
                app:layout_constraintStart_toStartOf="@+id/picture"
                app:layout_constraintTop_toBottomOf="@+id/picture"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="@string/change_picture" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="5dp"
                android:text="@string/name"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/tvEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnChangePicture" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/email"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/tvFav"
                app:layout_constraintEnd_toEndOf="@+id/tvName"
                app:layout_constraintStart_toStartOf="@+id/tvName"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <Button
                android:id="@+id/tvFav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#366796"
                android:text="@string/favourites"
                app:layout_constraintBottom_toTopOf="@+id/tvMyPosts"
                app:layout_constraintEnd_toEndOf="@+id/tvEmail"
                app:layout_constraintStart_toStartOf="@+id/tvEmail"
                app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

            <Button
                android:id="@+id/tvMyPosts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#366796"
                android:text="@string/my_posts"
                app:layout_constraintBottom_toTopOf="@+id/btnLogOut"
                app:layout_constraintEnd_toEndOf="@+id/tvFav"
                app:layout_constraintStart_toStartOf="@+id/tvFav"
                app:layout_constraintTop_toBottomOf="@+id/tvFav" />

            <Button
                android:id="@+id/btnLogOut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#366796"
                android:text="@string/logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvMyPosts"
                app:layout_constraintStart_toStartOf="@+id/tvMyPosts"
                app:layout_constraintTop_toBottomOf="@+id/tvMyPosts" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>